tests/models/enum/unnamed/f32/fail/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(ge = 2)]
        f32
    ),
}
fn main() {}
